# ClashMetaForAndroid

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/kr328/clash/: MainActivity.kt
core/: build.gradle.kts
core/src/main/cpp/: CMakeLists.txt  version.h
design/src/main/java/com/github/kr328/clash/design/: MainDesign.kt
design/src/main/res/layout/: component_large_action_label.xml  design_main.xml
service/src/main/java/com/github/kr328/clash/service/: ProfileManager.kt
